new question on rgb

--- a/_posts/question/2014-11-26-hex.markdown
+++ b/_posts/question/2014-11-26-hex.markdown
@@ -23,3 +23,7 @@ When using hex to represent colour we use 6 bits of information. The first two b
 
 ### How many colours?
 Using 6 hexadecimal bits to create colours on a computer screen means that there are 256 possible red values, 256 possible greens and 256 possible blues. If we multiply all the different combinations together (256 x 256 x 256) we end up with over 16 million differnt colours: 16, 777, 216 to be precise! 
+
+### See Also
+
+RGB Colours
