fixed css page and assigned correct sub-categories for softwares

--- a/_posts/software/2014-12-16-brackets.markdown
+++ b/_posts/software/2014-12-16-brackets.markdown
@@ -7,8 +7,8 @@ img: 850x400.png
 thumb: 75.png
 categories: 
 - softwares 
-- icon fonts
-- font awesome
+- text editors
+- brackets
 ---
 
 ### About Brackets
