--- a/_posts/software/2014-05-01-vim.markdown
+++ b/_posts/software/2014-05-01-vim.markdown
@@ -12,7 +12,14 @@ categories:
 ---
 
 ### About Vim
-Vim has been around since  . On their website Vim is described as follows: "Vim is an advanced text editor that seeks to provide the power of the de-facto Unix editor 'Vi', with a more complete feature set."
+Vim was developem by Bram Moolenar in 1991. On their website Vim is described as follows: 
+
+>Vim is an advanced text editor that seeks to provide 
+>the power of the de-facto Unix editor 'Vi', 
+>with a more complete feature set."
+
+
+<!--more-->
 
 ### Download and Instllation
 You can download Vim from [vim.org][vim.org]
