tidying up questions, categories needed spaces after each hyphen and added thumbnails.

--- a/_posts/question/2014-11-26-hex.markdown
+++ b/_posts/question/2014-11-26-hex.markdown
@@ -2,6 +2,7 @@
 layout: question
 title:  "What is Hexadecimal?"
 date:   2014-11-26 16:44:46
+thumb: 75.png
 author: Domhnall
 categories:
 - question
