--- a/_posts/question/2014-11-28-text.markdown
+++ b/_posts/question/2014-11-28-text.markdown
@@ -2,6 +2,7 @@
 layout: question
 title:  "How do I display text?"
 date:   2014-11-28 13:37:00
+thumb: 75.png
 author: Domhnall
 categories:
 - question
