--- a/_posts/question/2014-12-03-lists.markdown
+++ b/_posts/question/2014-12-03-lists.markdown
@@ -2,6 +2,7 @@
 layout: question
 title:  "How do I create lists?"
 date:   2014-12-03 13:37:00
+thumb: 75.png
 author: Domhnall
 categories:
 - question
