--- a/_posts/question/2014-12-13-rgb.markdown
+++ b/_posts/question/2014-12-13-rgb.markdown
@@ -2,6 +2,7 @@
 layout: question
 title:  "How do I Define Colours with RGB?"
 date:   2014-12-13 13:37:00
+thumb: 75.png
 author: Domhnall
 categories:
 - question
