nicer thumbnails for the software section

--- a/_posts/software/2014-02-01-brackets.markdown
+++ b/_posts/software/2014-02-01-brackets.markdown
@@ -4,7 +4,7 @@ title: "Brackets.io"
 date: 2014-02-01 13:37:00
 author: Domhnall
 img: 850x400.png
-thumb: 75.png
+thumb: brackets75.png
 categories: 
 - softwares 
 - text editors
