--- a/_posts/software/2014-01-01-atom.markdown
+++ b/_posts/software/2014-01-01-atom.markdown
@@ -4,7 +4,7 @@ title: "Atom"
 date: 2014-01-01 13:37:00
 author: Domhnall
 img: 850x400.png
-thumb: 75.png
+thumb: atom75.png
 categories: 
 - softwares
 - text editors
