--- a/_posts/software/2014-02-15-koding.markdown
+++ b/_posts/software/2014-02-15-koding.markdown
@@ -1,6 +1,6 @@
 ---
 layout: software
-title: "Brackets.io"
+title: "Koding.com"
 date: 2014-02-01 13:37:00
 author: Domhnall
 img: 850x400.png
@@ -8,22 +8,18 @@ thumb: koding75.png
 categories: 
 - softwares 
 - text editors
-- brackets
+- koding
 ---
 
-### About Brackets
-Developed by Adobe, Brackets describes itself as: 
-
->A modern, open source text editor that understands web design."
-
+### About Koding
+Online so you can code anywhere there's internet.
 <!--more-->
 
-### Download and Instllation
-Get your copy of brackets from the [website][brackets.io]
+### Koding.com
+Get started for free at [koding.com](https://koding.com)
 
-### Package Manager
+>Koding is a developer community and cloud development environment where 
+>developers come together and code in the browser – with a real development 
+>server to run their code. Developers can work, collaborate, write and run 
+>apps without jumping through hoops and spending unnecessary money.
 
-### Keyboard Shortcuts
-
-
-[brackets.io]:http://brackets.io/
